# ChangeLog for net-mail/getmail
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.212 2012/10/26 12:28:11 radhermit Exp $

*getmail-4.35.0 (26 Oct 2012)

  26 Oct 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.35.0.ebuild:
  Version bump.

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> getmail-4.17.0.ebuild,
  getmail-4.24.0.ebuild, getmail-4.32.0.ebuild, getmail-4.33.0.ebuild,
  getmail-4.34.0.ebuild:
  Drop alpha keywords

*getmail-4.34.0 (09 Sep 2012)

  09 Sep 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.34.0.ebuild:
  Version bump.

  09 Aug 2012; Tim Harder <radhermit@gentoo.org> -getmail-4.27.0.ebuild,
  -getmail-4.30.1.ebuild, -getmail-4.30.2.ebuild:
  Remove old.

*getmail-4.33.0 (09 Aug 2012)

  09 Aug 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.33.0.ebuild:
  Version bump.

*getmail-4.32.0 (09 Jul 2012)

  09 Jul 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.32.0.ebuild:
  Version bump.

*getmail-4.30.2 (28 Jun 2012)

  28 Jun 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.30.2.ebuild:
  Version bump.

  22 Jun 2012; Tim Harder <radhermit@gentoo.org> -getmail-4.26.0.ebuild,
  -getmail-4.29.0.ebuild, -getmail-4.30.0.ebuild:
  Remove old.

*getmail-4.30.1 (22 Jun 2012)

  22 Jun 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.30.1.ebuild:
  Version bump.

*getmail-4.30.0 (22 Jun 2012)

  22 Jun 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.30.0.ebuild:
  Version bump.

*getmail-4.29.0 (21 Jun 2012)

  21 Jun 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.29.0.ebuild:
  Version bump. Migrate to python-distutils-ng eclass.

  31 May 2012; Tim Harder <radhermit@gentoo.org> -getmail-4.25.0.ebuild:
  Remove old.

*getmail-4.27.0 (31 May 2012)

  31 May 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.27.0.ebuild:
  Version bump.

*getmail-4.26.0 (15 Apr 2012)

  15 Apr 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.26.0.ebuild: