@@ -1,28 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST getmail-4.17.0.tar.gz 156472 SHA256 0170eef918801e4b42bed05f1e255c81c6073c97a6c23bbbc678db5973d11c00
 DIST getmail-4.24.0.tar.gz 158613 SHA256 d9434f2725c517ce20e22b4c32f106c6d5985405a4fc58493718b1de0cd42be6
-DIST getmail-4.32.0.tar.gz 164888 SHA256 62ec1f450d4f0fcbc4bc8f854a1d07e42d9c78ef6cf9780c672ee5325ce8750a SHA512 8630aa642ecb8e24562f622c9da405c9a1155aad03f68b448126f4dd81cd67b0cecf78303a88c383a5f6ab21c188bdf483468c049ad374d04458746fc402224a WHIRLPOOL f14e08c17d96ed474528900fa358d5cb27b95d923517298c3370f1bc0401528f90910fe7f54333532f306d532157c096f9eed5462f42a05cf2c643d943129329
-DIST getmail-4.33.0.tar.gz 165069 SHA256 2338c2ac1e1908023fd3a670c2220ac4613a1e0e4fb208edb5eab4d1016fad5d SHA512 aabea957567b9f9c1c3e8000a3f86503e3d8753b959054afd1c5aaf160e753d1efe88e21ba7bc34c6e8374b4a27d8bec3eb2b0fe74470e38982426441179873c WHIRLPOOL 553414b60172fa42b7f5b1b08f10f7318ef9cacc8855259aa0873f96f0c9202302877ff3f6cfa0cc10ee09c2a4b98789e5516db86e77d6d7600fca9f6e138840
 DIST getmail-4.34.0.tar.gz 165949 SHA256 d171a388ee86bfa0d45e9d67b0f6ee3e7684afb9132f66dc941aff4a70d1bf53 SHA512 996b4796097710b3f7fdf7327852657e9e97e047c741aba4ef2de27eba998ca6f0f7deb4616e4847742c4369a5696ef6f21f901f4243d450c251144b7346035a WHIRLPOOL c7328da6f3454f3dd7a2dc0ab86d00eba431d46736b08903650f1f87a92ce112b8f71e0c0f542ee9ceb062c0d3f0dba2548db3883ddf475c32dd2927288adb48
 DIST getmail-4.35.0.tar.gz 166287 SHA256 fa5a7e520422c7de8721775f0711590bb070bad040634f69cf79bbe2d5f14eca SHA512 388ec30afb38f7f2445e6fbe526f04288889c76781e22d64f0b8e3972e62ce7ac8af6bb9baee93efc860b449fab20a0078e63898cf508e1215292a216c9083d0 WHIRLPOOL 49343212b9f7ccb34567cf462b92f93e237a9fcb56afb5b3a809a3b9b4edb57f2b86450f82b581f0862de06b049725ee19c628bd83648a71ec964734b6f94344
-EBUILD getmail-4.17.0.ebuild 812 SHA256 66e97643d66fbfbda20567458af68661de087a4cab21e67d18d5b5149eee1b58 SHA512 6708a36ab3899dd11d7186b60357a8032f28645f9396e42e2731df8475e2136693c0dddde12f256f9abdc9a7c13748a6dd9c05684888f6dd3973296cc0c9c544 WHIRLPOOL 37a5896d46800ff6507dbdddb83c255fbf0016da9a4ee8f208e91527cd27b4703885e543d9f40010986f5194a5c07e4aca5ab90adb258ead23e0a1046ab3752a
 EBUILD getmail-4.24.0.ebuild 789 SHA256 1c8bcbdfcb687d6548a697a567b76399ddc604ca38524e9c6e46920153e0fd1b SHA512 a5dddf8067bbcfffafce31e20bf473a2e97e4247131c482d219329e44f50ff531ab1f49e65776d1e59f8b335fad97b433667e4a05b4dd40ed9120dd6e4d0c9ec WHIRLPOOL a6be0b00d9c3ddac32db68dece6da0e07852974da61628cc8386abb78f7850c87889140a6bf2df0f30aa1abf9bd32520b5dde8e0d72ed44147e7b0c1adef25f4
-EBUILD getmail-4.32.0.ebuild 724 SHA256 62f8be0a12a4f8d5064878ec0e37a6cd314fc197ed415d127fa81de22358d7ea SHA512 712c0c55696d0346a34073b36e5a273b35f8d5947a934891defc7145775d5a94516bff9979ddebc4e84c0d02821065027725e1d2a401a9ea455c07ceda9aef35 WHIRLPOOL b294d2b4aea14e70ccccee7375104ef2a750c1ac1147a21e46ee14bb7ee46e538c286a790ecfc1181afedfafbe796f46a0722647fe75d8d4fedf6fa8d38f8fb7
-EBUILD getmail-4.33.0.ebuild 724 SHA256 d0adaae9fd61c306ba3c812b092719246d08c03dd5dbfdbd310d75e34721b96a SHA512 18628028297f0a24b90b1fce1869989e98f77ae99f91888dbbe41cf23a1475af14d9e91057202c9f4dae98719ca22442a5a6ccc5fd982f0c1d32625facb42d51 WHIRLPOOL 7b969856b7162071528708cf58821199a244c9bab6d369d18a9c6447bcfb8182abebbe4c0ace3d02a2de6cfaa1fb30b0a3932d345196b9567900e5b33cd5f77e
 EBUILD getmail-4.34.0.ebuild 792 SHA256 f7f619a5f3a2390c8efe222c1f54cbce5f8888f368f1c15f0aa6d25f09e4adad SHA512 2a974b89b5cb4a9b67851e8eaa06bf1e43b99eed8b557477c98dfdcd4cfbdde0a4edcd475c4f5fba8fa1e7fc1fe126816ef63fa7cb4d188afee8c4ee313fc89f WHIRLPOOL 5e740626e2db69d3f34a5eae10c92203771c32d577de0d80f511ef90310302415ff83133c031606f8fb9a08104e52f2ad73e9d4e74afd8eb3112f6f171c74d7b
 EBUILD getmail-4.35.0.ebuild 794 SHA256 bbf99aeb7ba88a71b0820b9a4c0d28b19dbf385083ce26016bdb1617ff0c28f2 SHA512 dc154199368607e28690afc05141b1c1bcaa0c8bd782b4dea5cde181df979417209ec943f2f4412b9dac310701d8993f16d6705b6edb01f4c798a1a92f855f65 WHIRLPOOL d27f5694b75b52e85398e43da5ef85dd17ff68edcc3638ef56b939c088670c186dcc642616f8d325e06e93df0c6a4aeb6883f474144bc4fced9c344a4a3a8720
-MISC ChangeLog 27536 SHA256 bb296c4656972458e559c6d5cd4089a4488334147d96ee14e855e265a484c092 SHA512 99d764dd5207f2dbee42cb21d0e85ed35ab5c8ff8f212525e2c32fe8d6ef8559377adb610a0d7e418ef9dfb06c1fa2a563488effbde701959edb436fc3655ba9 WHIRLPOOL c19b0a9898cb4035b471353999bcbf2568abab27401716b4c56a3adb063f407414c7cf1745fd5b5f75fdbced92f8b4b74abe4b1533f6bec7b1aeb69a912e1f17
+MISC ChangeLog 27674 SHA256 f6be9ddeefa744844fa19e3f08a2dcc2bf5efafb3415015e4a4da5cd2ea6f749 SHA512 54f2d9e1294450fd52d2cf9c6bb30b1207a6396f46d0cd33edcbd300ddd35e6b88e0bf9cd7777133bb4c13d54e415a3b0676a708686b4da246db51f39fe17b12 WHIRLPOOL f2509f23538e04cff4ca128e2635f3f012a874102549cf5d13e9a5aae7f4655012d6cb6b1f267fd57b86861fcd80aaabf319f46b10f6517bbb1d9ea785c0155c
 MISC metadata.xml 161 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 SHA512 77001eed8032a3b919c30d8dd9314951d3471528e770ef5ad840060e217037f5e1f0eb2cf4c5f90cb2d58e9598c8a38619a1301f890d6dd734900ab6273fb6ec WHIRLPOOL 0d251627fdbf63b5c090313d5bbf3e45acf630331742dc930a0136cc382b7720fe4099c64fd439fd31fe0eed48a4199d6e31692dbdedd34f803f9e2567d46975
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQioHgAAoJEEqz6FtPBkyjsa0IAIzYWpS8eiPYOOXj3ZAY/hE+
-3Bl1vjoaqyWkylYVIaDpj0gdDgDyPmy8E1yGB/cZv+JMBD/Bsin4Ay7HQNIDGhDz
-Y/KQzV3r+PfYmqDGM0rJ0nw+4kiR/9zopFNwcpzF67ddvnyyQK5wY7RSEN4Waw2g
-M/ysapFofYahXknWspc4OaqITckHurOaiO4FROKyZ1f63tPElLfuwo+gqbbzJmOc
-InBk52FFO6bFPzvFSxPFoPz8vR2KtggIiB2dtqcEJ6m+OunDugHmYc1GwJDFlPZZ
-aS7hJyqJ6Gs2Ir2brxfe2RZcZTmY06/UCAvr3NihVzIAWgMVsrhnGCD87KWfS4c=
-=WQDl
+iQEcBAEBCAAGBQJQioIaAAoJEEqz6FtPBkyj314H/Rnu1ntjx8yk0gSrr4e1vvUK
+6gFtgrKxrZPwp8xc1iWRWhNt5DJ/S3Gp0ibOu2IGU7oabNpR/7dIfNKCciE9aDRV
+p++cwopfvw0WkXi1+FXa3tR1AgYgiZ079lLeoiwVw2AYfTlBvQbNGe6m9Ov//Ydz
+eBC8e0OtkbKrF9KjvgFLPT1rh23WSnaQz8BB+JkT9V9km82gcBaw2geB09/kTXcN
+J6KT3ipfwcGVasUwyFMuAzHMimpEH9MiHt/FSYhi4t84GV9M6wPohjT9uWyTPRH8
+yNJHTIRgJDNB80wM9f4J8roQ7UCQvNw1Iycjh9geWWKlUhG3CxGH+NOGZLshLtE=
+=wbRT
 -----END PGP SIGNATURE-----
